# retrieval

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  todo.txt
docs/: analysis.txt  design.txt  model_analysis.txt  reqs.txt
src/drafts/python/movie_lens_retrieval/: RetrieverAndRanker.py  __init__.py  test_RetrieverAndRander.py
src/main/python/movie_lens_retrieval/: MovieData.py  Retrieval.py  Retriever.py  RetrieverAndRanker.py  UserData.py
src/main/python/movie_lens_retrieval/for_numpy/: RetrieverAndRanker.py
src/main/python/movie_lens_retrieval/misc/: Bayesian.py  BayesianAvg.py  dpmm_density.py  inferrence_data_prep.py  other_rankers.py
src/main/resources/: README.txt
src/main/resources/pre_transform/: schema.pbtxt
src/main/resources/serving_model/1763513411/: fingerprint.pb  saved_model.pb
src/main/resources/serving_models/: README.txt
src/main/resources/serving_models/metadata_model/: fingerprint.pb  saved_model.pb
src/main/resources/serving_models/user_movie_model/: fingerprint.pb  saved_model.pb
src/test/python/movie_lens_retrieval/: Retrieval_test.py  calc_metrics.py  constrastive_splits.py  hard_negative_mining_splits.py  helper.py  test_MovieData.py  test_Retrieval.py  test_Retriever.py  test_RetrieverAndRander.py  test_RetrieverAndRanker.py  test_UserData.py  test_tmp.py  write_user_recommendations.py  write_user_recommendations_and_negatives.py
src/test/python/movie_lens_retrieval/for_numpy/: test_RetrieverAndRanker.py
src/test/python/movie_lens_retrieval/misc/: BayesianAvg_test.py  Bayesian_test.py  dpmm_density_test.py  other_rankers_test.py  write_cold_start.py
src/test/resources/: README.txt
src/test/resources/data/: .gitignore  README.txt  ratings_sorted_1_joined-00000-of-00004.parquet  ratings_sorted_1_joined-00002-of-00004.parquet  ratings_sorted_2_joined-00001-of-00004.parquet  ratings_test.dvc  ratings_test_liked.dvc  ratings_train.dvc  ratings_train_liked.dvc  ratings_val.dvc  ratings_val_liked.dvc  recommended_movies.array_record.dvc  recommended_movies_minus_train_val.array_record.dvc  recommended_movies_timestamps.array_record.dvc
src/test/resources/data/movies/: movies-00000-of-00001.parquet  (+2 more)
(+22 files in other folders)
