[build-system]
requires = ["setuptools>=72", "wheel", "tomli"]
build-backend = "setuptools.build_meta"
[project]
name = "movie_lens_retrieval"
version = "0.1.0"
description = "Retrieval class for Kaggle recommender systems project"
authors = [
    { name = "Nichole King" },
]
#readme = "README.md"
requires-python = ">=3.10.0"
# de
dependencies = [
  'faiss-cpu; platform_system != "Linux"',
  'scann; platform_system == "Linux"',
  'tensorflow>=2.20.0', 'numpy >= 2.0',
  'array-record=0.8.3', 'msgpack==1.1.2', 'msgpack-numpy==0.4.8',
  'polars>=1.35.2'
]
readme = "README.md"
license = "MIT"

classifiers = [
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 1 - development",
]


[tool.setuptools]

[tool.setuptools.packages.find]
where = ["src/main/python"]
include = ['movie_lens_retrieval',]
#exclude = ["tests"]

[project.urls]
Homepage = "https://www.kaggle.com/code/nicholeasuniquename/recommender-systems/"
Repository = "https://github.com/nking/retrieval.git"

[project.optional-dependencies]
test = ["pytest", ]
